# rust-microservices-template

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile.build  LICENSE  README.md  deploy.sh  docker-compose.yaml  test_suite.sh
auth-server/: Cargo.toml  Dockerfile  config.toml
auth-server/src/: main.rs
billing/: Cargo.toml  Dockerfile  config.toml
billing/src/: appconfig.rs  db.rs  kafka_consumer.rs  kafka_processor.rs  main.rs  validation_schema.rs
deployments/: auth-server.yaml  billing.yaml  gateway.yaml  orders.yaml  warehouse.yaml
gateway/: Cargo.toml  Dockerfile  config.toml
gateway/src/: api.rs  appconfig.rs  main.rs
gateway/src/handlers/: billing.rs  mod.rs  orders.rs  warehouse.rs
orders/: Cargo.toml  Dockerfile  config.toml
orders/src/: api.rs  appconfig.rs  db.rs  kafka_consumer.rs  kafka_processor.rs  main.rs  validation_schema.rs
orders/src/handlers/: api.rs
warehouse/: Cargo.toml  Dockerfile  config.toml
warehouse/src/: api.rs  appconfig.rs  db.rs  kafka_consumer.rs  kafka_processor.rs  main.rs  validation_schema.rs
warehouse/src/handlers/: api.rs
