[package]
name = "auth-server"
version = "0.1.0"
authors = ["Kamakin Andrey <a.kamakin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
chrono = "0.4"
clap = "2.33"
env_logger = "0.7"
futures = "0.3"
jsonwebtoken = "6.0"
listenfd = "0.3"
log = "0.4"
r2d2 = "0.8"
r2d2_redis = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
