[package]
name = "gateway"
version = "0.1.0"
authors = ["Kamakin Andrey <a.kamakin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-rt = "0.2"
actix-web = "1.0"
env_logger = "0.7"
futures = "0.1"
listenfd = "0.3"
rdkafka = "0.21"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
