[package]
name = "gateway"
version = "0.1.0"
authors = ["Kamakin Andrey <a.kamakin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-rt = "0.2"
actix-web = "1.0"
clap = "2.33"
rust-crypto = "0.2"
env_logger = "0.7"
futures = "0.1"
listenfd = "0.3"
log = "0.4"
r2d2 = "0.8"
r2d2_redis = "0.12"
reqwest = "0.9"
rdkafka = "=0.21"
rdkafka-sys = "=1.2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
