[package]
name = "warehouse"
version = "0.1.0"
authors = ["Kamakin Andrey <a.kamakin@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8"
actix-web = "1.0"
listenfd = "0.3"
env_logger = "0.7"
r2d2_redis = "0.11"
qstring = "0.7"
